# finn-plus

./: .dvcignore  .flake8  .gitignore  .gitlab-ci-base.yml  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  MANIFEST.in  README.md  dvc.yaml  external_dependencies.yaml  fetch-repos.sh  finn.py  installDependencies.sh  mkdocs.yml  models.dvc  pyproject.toml  reports.dvc  requirements.txt  run-docker.sh  run_finn.py  setup.cfg  test.sh
.dvc/: config
.github/workflows/: check-docstrings.yml  generate-documentation.yml  release.yml
benchmarking/: bench-ci.yml  bench.py  bench_base.py  collect.py  measure.py  util.py
benchmarking/cfg/: fifosizing_test.json  metafi_fifosizing_test.json  metafi_test.json  mobilenetv1_test.json  mvau_test.json  resnet50_fifosizing_test.json  resnet50_test.json  synthetic_fifotest.json  transformer_gpt_all.json  transformer_radioml_all.json  transformer_sweep.json  transformer_test.json  vgg10_test.json
benchmarking/dut/: metafi.py  mobilenetv1.py  mvau.py  resnet50.py  resnet50_custom_steps.py  synthetic_nonlinear.py  transformer.py  transformer_custom_steps.py  vgg10.py
ci/: .gitlab-bench.yml  .gitlab-setup.yml  collect.py  measure.py
ci/cfg/: baseline_fifosizing.yml  default_fifosizing_sweep.yml  driver_rework_test.yml  fifosizing_transformer.yml  (+10 more)
custom_hls/: instrumentation.template.cpp
docker/: Dockerfile.finn  finn_entrypoint.sh  quicktest.sh
docs/: index.md
driver/: iterative_live_fifosizing_driver.ipynb
dvclive/: metrics.json  params.yaml
finn_xsi/: CMakeLists.txt  Makefile  fifosim.cpp  rtlsim_config.hpp.template  rtlsim_xsi.cpp  simulation_config.h.in  xsi_finn.cpp  xsi_finn.hpp
finn_xsi/axi_control/: s_axi_control.cpp  s_axi_control.h
finn_xsi/axis_control/: axis_control.cpp  axis_control.h
finn_xsi/clock/: clock.cpp  clock.h
finn_xsi/cmake/: CompilerWarnings.cmake
finn_xsi/finn_xsi/: .clang-format  CMakeLists.txt  IsolatedSimulationBackend.cpp  LayerSimulationBackend.cpp  Makefile  adapter.py  rtlsim_config.hpp.template  sim_engine.py  xsi_bind.cpp
finn_xsi/finn_xsi/include/: AXIS_Control.h  AXI_Control.h  Clock.h  CommunicationChannel.hpp  Design.h  FIFO.h  InterSimulationInterface.hpp  InterprocessCommunicationChannel.hpp  InterprocessCommunicationChannelInterface.hpp  IsolatedSimulation.hpp  Kernel.h  Port.h  Simulation.hpp  SimulationInterface.hpp  SocketServer.h  StableStateTracker.hpp  helper.h
finn_xsi/finn_xsi/src/: AXIS_Control.cpp  AXI_Control.cpp  Clock.cpp  FIFO.cpp  SocketServer.cpp
finn_xsi/finn_xsi/unittests/: CMakeLists.txt  FIFO_test.cpp  Integration_test.cpp  InterSimulationInterface_test.cpp  InterprocessCommunicationChannel_test.cpp
finn_xsi/include/: AXIS_Control.h  AXI_Control.h  Clock.h  Design.h  Kernel.h  Port.h  SharedLibrary.h  helper.h
finn_xsi/src/: AXIS_Control.cpp  AXI_Control.cpp  Clock.cpp  Design.cpp  Kernel.cpp  Port.cpp  SharedLibrary.cpp
interface/: finn_deps.py  finn_envvars.py  finn_inspect.py  interface_globals.py  interface_utils.py  manage_deps.py  manage_envvars.py  manage_tests.py
metafi/: build_all.py  build_all_final.py  custom_steps.py
notebooks/: notebook_utils.py  pyproject.toml
notebooks/advanced/: 0_custom_analysis_pass.ipynb  1_custom_transformation_pass.ipynb  2_custom_op.ipynb  3_folding.ipynb  4_advanced_builder_settings.ipynb
notebooks/basics/: 0_how_to_work_with_onnx.ipynb  1_brevitas_network_import_via_QONNX.ipynb
notebooks/end2end_example/bnn-pynq/: cnv_end2end_example.ipynb  tfc_end2end_example.ipynb  tfc_end2end_verification.ipynb
notebooks/end2end_example/cybersecurity/: 1-train-mlp-with-brevitas.ipynb  2-import-into-finn-and-verify.ipynb
scripts/: builderConfToWiki.py  check_docstrings.py  driver_install_dependencies.sh  monitor.py  split_api_docs.py
tests/: conftest.py  pyproject.toml
tests/analysis/: test_unsupported_layers.py
tests/brevitas/: test_brevitas_avg_pool_export.py  test_brevitas_cnv.py  test_brevitas_debug.py  test_brevitas_fc.py  test_brevitas_mobilenet.py  test_brevitas_validate_mobilenet.py
tests/builder/: example_build.yaml  example_custom_steps.py  test_yaml_to_cfg.py
tests/end2end/: test_end2end_bnn_pynq.py  test_end2end_cybsec_mlp.py  test_end2end_mobilenet_v1.py  test_ext_weights.py
tests/fpgadataflow/: test_bram_block_search.py  test_convert_to_hw_layers_cnv.py  test_convert_to_hw_layers_fc.py  test_convert_to_hw_layers_synthetic.py  test_convert_to_hw_pool_batch.py  test_elementwise_binary.py  test_fifosizing.py  test_fpgadataflow_arbiter.py  test_fpgadataflow_channelwise_ops.py  test_fpgadataflow_concat.py  test_fpgadataflow_convinputgenerator.py  test_fpgadataflow_convinputgenerator_rtl_dynamic.py  test_fpgadataflow_demux.py  test_fpgadataflow_downsampler.py  test_fpgadataflow_dwc.py  test_fpgadataflow_elementwise_binary.py  test_fpgadataflow_finnloop.py  test_fpgadataflow_float2int.py  test_fpgadataflow_fmpadding.py  test_fpgadataflow_ipstitch.py  test_fpgadataflow_labelselect.py  test_fpgadataflow_mvau.py  test_fpgadataflow_thresholding.py  test_fpgadataflow_vitis_build.py  test_fpgadataflow_vvau.py  test_minimize_bit_width.py  test_set_folding.py  test_split_large_fifos.py
tests/fpgadataflow/multifpga/: test_multifpga_end2end.py  test_multifpga_inseperable_nodes.py  test_multifpga_kernel_preparation.py  test_multifpga_metadata.py  test_multifpga_misc.py  test_multifpga_partitioning.py  test_multifpga_partitioning_core.py  test_multifpga_sdp_creation.py
tests/fpgadataflow/vitisbuild/: example_config.txt  test_vitis_build.py
tests/frontend/: test_frontend_flow.py
tests/infrastructure/: test_custom_step_resolution.py  test_ip_cache.py
tests/notebooks/: test_jupyter_notebooks.py
tests/testing_util/: imagenet.py  test.py
tests/transformation/: test_batchnorm_to_affine_bnn_pynq.py  test_infer_data_layouts_cnv.py  test_infer_datatypes_lfc.py  test_qonnx_to_finn.py
tests/transformation/streamline/: test_sign_to_thres.py  test_streamline_cnv.py  test_streamline_fc.py
tests/util/: test_build_dataflow.py  test_data_packing.py  test_hls_vector.py
(+3611 files in other folders)
