[project]
name = "finn-plus-tests"
version = "0.1.0"
description = "Test suite for finn-plus"
requires-python = ">=3.10,<3.12"
maintainers = [
    { name = "Felix Jentzsch", email = "felix.jentzsch@upb.de" },
    { name = "Christoph Berganski", email = "christoph.berganski@upb.de" },
    { name = "Linus Jungemann", email = "linus.jungemann@upb.de" },
    { name = "Bjarne Wintermann", email = "bjarne.wintermann@upb.de" },
]

[project.urls]
"GitHub" = "https://github.com/eki-project/finn-plus"
"EKI Project" = "https://www.eki-project.tech/"

[tool.poetry]
name = "finn-plus-tests"
version = "0.1.0"
description = "Test suite for finn-plus"
packages = [{ include = "tests", from = ".." }]
include = ["example_data/**/*"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pytest = "~8.4.1"
pytest-metadata = "~3.1.1"
pytest-html = "~4.1.1"
pytest-html-merger = "~0.1.0"
pytest-cov = "~6.2.1"
pytest-forked = "~1.6.0"
pytest-rerunfailures = "~15.1"
pytest-dependency = "~0.6.0"
pytest-parallel = "~0.1.1"
pytest-xdist = { version = "~3.6.1", extras = ["setproctitle"] }
torch = "~2.7.1"
torchvision = "~0.22.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
